fix: Исправить замечания после ревью #1